# TextAutocompletionOnWikiText2

./: .gitignore  LICENSE  README.md  TextAutocompletionOnWikiText2.ipynb  TextAutocompletionOnWikiText2_colab.ipynb  config.yaml  pyproject.toml  requirements.txt  ruff.toml
src/text_autocompl/: __init__.py  data.py  files.py  log.py  metrics.py  models.py  training.py
