[project]
name = "text_autocompl"
version = "0.1.0"
description = "Text autocompletion model for messenger, trained on WikiText-2."
authors = [
    {name = "Aleksei Bogachev",email = "bogachev.aleksey.m@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14.1"
dependencies = [
    "numpy (>=2,<3)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "transformers (>=5.9.0,<6.0.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "huggingface-hub (>=1.16.1,<2.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "requests (>=2.34.2,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "pandas (>=2,<3)",
    "click (>=8.4.0,<9.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "jiwer (>=4.0.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "cuda_pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[[tool.poetry.source]]
name = "cpu_pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"



[tool.poetry.dependencies]
torch = {source = "cuda_pytorch"}
torchvision = {source = "cuda_pytorch"}
[dependency-groups]
dev = [
    "ruff (>=0.15.14,<0.16.0)",
    "jupyterlab (>=4.5.7,<5.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"